# azure-devops-terraform-example

./: LICENSE  README.md
app/: Dockerfile  main.py  pyproject.toml
app/src/: fibbonaci.py
azure/: main.tf
