[tool.poetry]
name = "pyfibbo"
version = "0.1.0"
description = "Python implementation to find if given number if a fibbonacii"
authors = ["Nikhil Akki <17634231+nikhilakki@users.noreply.github.com >"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
pylama = "^8.4.1"
black = "^22.6.0"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
